<resources>
    <string name="app_name">Plan-It</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_friends_list">Friends List</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="title_activity_view_event_actvity">View Event</string>
    <string name="title_activity_events_list">Events List</string>
    <string name="event_name">Event Name</string>
    <string name="event_owner">Event Owner</string>
    <string name="event_countdown">Countdown</string>
    <string name="event_description">Event Description</string>
    <string name="attending">Attending</string>
    <string name="invited">Invited</string>
    <string name="declined">Declined</string>
    <string name="owner">Owner</string>
    <string name="filterBy">Filter By</string>
    <string name="showAll">Show All</string>
    <string name="action_search">Search</string>
    <string name="past">Past</string>
    <string name="item">Item</string>
    <string name="supplying">Who is Supplying?</string>
    <string name="estimated_cost">Estimated Cost</string>
    <string name="actual_cost">Actual Cost</string>
    <string name="total">Total</string>
    <string name="add_item">Add Item</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_email">Please Enter Your Email</string>
    <string name="login">Login</string>
    <string name="email_user">Email/User</string>
    <string name="split">Split</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="click_image_to_add">Click image box to add or change picture</string>
    <string name="enter_username">Please Enter a Username</string>
    <string name="enter_your_username_email">Please Enter Your Username/E-mail</string>
    <string name="enter_password">Please Enter a Password</string>
    <string name="enter_your_password">Please Enter Your Password</string>
    <string name="reenter_password">Please Re-Enter Your Password</string>
    <string name="enter_name">Please enter your full name</string>
<string name="name_event">What shall we call the Event?</string>
    <string name="why_event">Why are we having an Event?</string>
    <string name="where_event">Where is the Event taking place?</string>
    <string name="location_event">Location of Event</string>
    <string name="event_title">Title of the Event</string>
    <string name="event_when">When is the Event?</string>
    <string name="end">End Date</string>
    <string name="start">Start Date</string>
    <string name="to">To Time</string>
    <string name="from">From Time</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="title_activity_register">Register Activity</string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="search_for_friend_instruction">Enter your friends User Name or Email Address and click Search</string>
    <string name="enter_username_email">Please Enter a Username/E-mail</string>
    <string name="add_friend">Add Friend</string>
    <string name="title_activity_messages">Messages</string>
    <string name="send">Send</string>
    <string name="type_message">Type Message Here</string>
    <string name="title_activity_budget_list">BudgetListActivity</string>
    <string name="time">Time to get a watch</string>
</resources>
