<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/filterBy"/>
    <Button
        android:id="@+id/filterButtonInvited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invited"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        />
    <Button
        android:id="@+id/filterButtonAccepted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attending"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        />
    <Button
        android:id="@+id/filterButtonDeclined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/declined"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        />
    <Button
        android:id="@+id/filterButtonOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/owner"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        />
</menu>