<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/cardview_dark_background">
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/filterBy"
    android:textSize="30dp"
    android:textColor="#FFFFFF"/>
    <Button
        android:id="@+id/filterButtonInvited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invited"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="#00CCFF"
        android:textColor="#FFFFFF"
        />
    <Button
        android:id="@+id/filterButtonAttending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attending"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="#00CCFF"
        android:textColor="#FFFFFF"
        />
    <Button
        android:id="@+id/filterButtonDeclined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/declined"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="#00CCFF"
        android:textColor="#FFFFFF"
        />
    <Button
        android:id="@+id/filterButtonOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/owner"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="#00CCFF"
        android:textColor="#FFFFFF"
        />
    <Button
        android:id="@+id/filterButtonAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showAll"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="#00CCFF"
        android:textColor="#FFFFFF"
        />
</LinearLayout>
