<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.plan_it.mobile.plan_it.ViewEventActvity">

    <item android:id="@+id/action_friends_list" android:title="@string/title_activity_friends_list"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_add_friends" android:title="@string/title_activity_add_friend"
        android:orderInCategory="200" app:showAsAction="never" />

    <item android:id="@+id/action_event_list" android:title="@string/title_activity_events_list"
        android:orderInCategory="300" app:showAsAction="never" />

    <item android:id="@+id/action_refresh" android:title="Refresh View"
        android:orderInCategory="400" app:showAsAction="never" />

    <item android:id="@+id/action_logout" android:title="Logout"
        android:orderInCategory="500" app:showAsAction="never" />

</menu>
