<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.plan_it.mobile.plan_it.ItemListActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:id="@+id/item_list_text_view"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>
<LinearLayout
    android:id="@+id/layout_item_list_headers"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@+id/item_list_text_view">
    <TextView
        android:background="@drawable/back"
        android:padding="5dp"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/item"
        android:id="@+id/item_list_text_item"
        android:textSize="15sp"/>
    <TextView
        android:background="@drawable/back"
        android:padding="5dp"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/supplying"
        android:id="@+id/item_list_text_supplying"
        android:textSize="15sp"/>
    <TextView
        android:background="@drawable/back"
        android:padding="5dp"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/estimated_cost"
        android:id="@+id/item_list_label_estimated_cost"
        android:textSize="15sp"/>
    <TextView
        android:background="@drawable/back"
        android:padding="5dp"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/actual_cost"
        android:id="@+id/item_list_label_estimated_actual_cost"
        android:textSize="15sp"/>
</LinearLayout>

<ListView
    android:id="@+id/item_list_list_view"
    android:background="@drawable/back"
    android:layout_width="360dp"
    android:padding="5dp"
    android:layout_height="match_parent"
    android:layout_below="@+id/layout_item_list_headers"
    android:layout_above="@+id/layout_item_list_footers"/>

    <LinearLayout
        android:background="@drawable/back"
        android:id="@+id/layout_item_list_footers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <TextView
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/add_item"
            android:textStyle="bold"
            android:id="@+id/item_list_add_item_button"
            android:textSize="20sp"/>
        <TextView
            android:background="@drawable/back"
            android:padding="5dp"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/total"
            android:id="@+id/item_list_text_total"
            android:textSize="15sp"/>
        <TextView
            android:background="@drawable/back"
            android:padding="5dp"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="$120.00"
            android:id="@+id/item_list_text_estimated_cost"
            android:textSize="15sp"/>
        <TextView
            android:background="@drawable/back"
            android:padding="5dp"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:text="$100.00"
            android:id="@+id/item_list_text_estimated_actual_cost"
            android:textSize="15sp"/>
    </LinearLayout>
</RelativeLayout>
