<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.plan_it.mobile.plan_it.AddFriendActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_for_friend_instruction"
        android:id="@+id/txt_search_for_friend"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/txt_search_for_friend"
        android:id="@+id/search_for_friend">

     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/search_for_friend_input"
         android:hint="@string/enter_username_email" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_search_for_friend"
        android:text="@string/action_search"
        android:layout_below="@id/search_for_friend"
        android:onClick="SearchForFriend"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_search_for_friend"
        android:paddingTop="50dp"
        android:id="@+id/txt_search_for_friend_result"/>

    <Button
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_friend"
        android:text="@string/action_search"
        android:onClick="AddFriend"
        android:layout_below="@id/txt_search_for_friend_result"/>

</RelativeLayout>
