<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_photo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_perm_identity_black_24dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_name"
                android:text="@string/event_name"
                android:layout_toRightOf="@+id/event_photo"
                android:layout_alignParentTop="true"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_countdown"
                android:text="@string/event_countdown"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:textSize="15dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_button_right"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/event_countdown"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_thumb_down_black_24dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_button_left"
                android:layout_toLeftOf="@+id/event_button_right"
                android:layout_below="@+id/event_countdown"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_thumb_up_black_24dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_owner"
                android:text="@string/event_owner"
                android:layout_toRightOf="@+id/event_photo"
                android:layout_below="@+id/event_name"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_description"
                android:text="@string/event_description"
                android:layout_toRightOf="@+id/event_photo"
                android:layout_below="@+id/event_owner"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>