<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_list_card_view">
<LinearLayout
    android:background="@drawable/back"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_list_id"
        android:visibility="gone"/>
    <ImageView
        android:layout_width="0dp"
        android:layout_weight=".07"
        android:layout_height="match_parent"
        android:id="@+id/item_list_delete_button"
        android:src="@drawable/ic_delete_grey_24dp"/>
    <EditText
        android:gravity="center_vertical|left"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".29"
        android:text="@string/item"
        android:id="@+id/item_list_text_item"
        android:padding="2dp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textSize="12sp"/>
    <ImageView
        android:layout_gravity="center_vertical|right"
        android:clickable="true"
        android:layout_width="0dp"
        android:layout_weight=".05"
        android:layout_height="match_parent"
        android:id="@+id/item_list_edit_itemname"
        android:src="@drawable/ic_edit_blue_24dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/supplying"
            android:id="@+id/item_list_text_supplying"
            android:padding="2dp"
            android:textSize="12sp"
            android:visibility="visible"
            android:clickable="true"/>
        <EditText
            android:gravity="center_vertical|left"
            android:layout_width="0dp"
            android:layout_weight=".10"
            android:layout_height="match_parent"
            android:text="@string/estimated_cost"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:id="@+id/item_list_text_estimated_cost"
            android:padding="2dp"
            android:textSize="12sp"/>
        <ImageView
            android:layout_gravity="center_vertical|right"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight=".05"
            android:layout_height="match_parent"
            android:id="@+id/item_list_estimated_cost_edit"
            android:src="@drawable/ic_edit_blue_24dp"/>

        <EditText
            android:gravity="center_vertical|left"
            android:layout_width="0dp"
            android:layout_weight=".10"
            android:layout_height="match_parent"
            android:text="@string/actual_cost"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:id="@+id/item_list_text_actual_cost"
            android:padding="2dp"
            android:textSize="12sp"/>
        <ImageView
            android:layout_gravity="center_vertical|right"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight=".05"
            android:layout_height="match_parent"
            android:id="@+id/item_list_actual_cost_edit"
            android:src="@drawable/ic_edit_blue_24dp"/>
    </LinearLayout>

</android.support.v7.widget.CardView>